2011-11-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac examples/Makefile.am
    Detect ALSA and use it in varispeed-play.

    * examples/audio_out.[ch]
    On Linux used ALSA instead of OSS when available.

    * src/samplerate.c src/src_linear.c src/src_zoh.c \
            examples/sndfile-resample.c examples/timewarp-file.c
    Fix warnings from the Goanna static analysis tool.

2011-08-15  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac
    Add symbol support for kfreebsd-*-gnu-*.

    * configure.ac doc/Makefile.am
    Improve installation of html docs.

    * examples/audio_out.c tests/callback_hang_test.c
    Fix compiler warnings.

    * NEWS README Win32/config.h doc/*.html
    Updates for 0.1.8 release.

    * configure.ac
    Release 0.1.8.

2011-02-22  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/util.[ch]
    Rename function print_cpu_name() to get_cpu_name(). Add code for Mac OSX and
    FreeBSD.

    * tests/multichan_throughput_test.c tests/throughput_test.c
    Update to use get_cpu_name().

2010-11-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/*.[ch]
    Fix typo in comments.

2010-10-16  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/fastest_coeffs.h src/high_qual_coeffs.h src/mid_qual_coeffs.h
    Fix typo in comments.

    * configure.ac
    Add AM_SILENT_RULES.

    * doc/download.html
    Add a GPG signature.

2010-09-27  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/float_cast.h
    Add lrint/lrintf version for Win64. Thanks to Dmitry Baikov.

2010-01-10  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/sndfile-resample.c
    Prevent creation of double length output files when conversion is restarted
    due to clipping of the output when the format is FLAC. This problem arises
    due to libsndfile's in ability to seek in a FLAC file during write.

    * src/samplerate.h tests/termination_test.c